# UBB-work

./: README.md
semester1/ASC/: new 2.asm  new 2.lst
semester1/ASC/Final_exam/: first_model_pb4.asm  first_model_pb4.lst
semester1/ASC/HM_2/: 30 1.asm  30 1.lst  30 2.asm  30 2.lst  30 3.asm  30 3.lst  30 4.asm  30 4.lst  30 5.asm  30 5.lst
semester1/ASC/HM_4/: HM_4.7z  pb_15.asm  pb_15.lst
semester1/ASC/HM_5/: 02_HM5.asm  02_HM5.lst  Homework_05.asm  Homework_05.lst  new 1.lst
semester1/ASC/HM_6/: Homework_6.asm  Homework_6.lst  pb20.asm  pb26.asm  pb26.lst
semester1/ASC/HM_8/: hm_8_15.asm  hm_8_15.lst  modul_hm8.asm  modul_hm8.lst
semester1/ASC/HM_9/: asm_module.asm  hm9.c
semester1/ASC/HW_3/: HW_3.7z  lab3_01.asm  lab3_01.lst  lab3_02.asm  lab3_02.lst  lab3_03.asm  lab3_03.lst
semester1/ASC/Test/: input.txt  new 1.asm  new 1.lst  output.txt  pb_de5.asm  pb_de5.lst
semester1/ASC/practice/: new 1.asm
semester1/FundamentalsOfProgramming/a1-JuleiAndrei-main/: README.md  p1.py  p2.py  p3.py
semester2/Data Structures and Algorithms/dsa/assignment5-SortedMap_BST/SortedMapSol/sorted-map-bst/: CMakeLists.txt  README.md
semester2/Data Structures and Algorithms/dsa/assignment5-SortedMap_BST/SortedMapSol/sorted-map-bst/src/: App.cpp 
semester2/Data Structures and Algorithms/dsa/assignment5-SortedMap_BST/SortedMapSol/sorted-map-bst/src/headers/: SMIterator.h  SortedMap.h
semester2/Data Structures and Algorithms/dsa/assignment5-SortedMap_BST/SortedMapSol/sorted-map-bst/src/implementations/: ExtendedTest.cpp  SMIterator.cpp  ShortTest.cpp  SortedMap.cpp
semester2/Object Oriented Programing/a8-9-JuleiAndrei-main/: CMakeLists.txt  adminwindow.cpp  adminwindow.h  dogmodel.cpp  dogmodel.h  domain.h  dynamicvector.h  exceptions.h  main.cpp  service.h  userwindow.cpp  userwindow.h  validators.h
semester2/Object Oriented Programing/e-retake-JuleiAndrei-main/: CMakeLists.txt  domain.cpp  domain.h  main.cpp  mainWindow.cpp  mainWindow.h  observer.h  repository.cpp  repository.h  service.cpp  service.h
semester2/Object Oriented Programing/t3-JuleiAndrei-main/: CMakeLists.txt  domain.h  main.cpp  mainwindow.cpp  mainwindow.h  repository.h  service.h
semester3/MAP/FinalLab/: run.sh  (+1 more)
(+351 files in other folders)
